--- a/index.html
+++ b/index.html
@@ -27,21 +27,21 @@
             <p class="text_1">꒰ঌあまおち天気予報໒꒱</p>
             <div class="url-text2" class="input-block">
                 <div class="select-block">
-                  <label>大分類：
+                  <label>大区分：
                     <select id="category-select-1">
                       <option>選択してください</option>
                     </select>
                   </label>
                 </div>
                 <div class="select-block">
-                  <label>中分類：
+                  <label>中区分：
                     <select id="category-select-2" disabled>
                       <option>選択してください</option>
                     </select>
                   </label>
                 </div>
                 <div class="select-block">
-                    <label>小分類：
+                    <label>小区分：
                       <select id="category-select-3" disabled>
                         <option>選択してください</option>
                       </select>
@@ -49,7 +49,6 @@
                 </div>
                 <p class="url-text2"><br></p>
               </div>
-              <div class="url-text2"id="send-button">꒰ঌ選択した地域の天気予報を見る໒꒱</div>
               <p class="url-text2"><br></p>
                 <p class="url-text2"id="publishingOffice">　</p>
                 <p class="url-text2"id="reportDatetime">　</p>
@@ -75,5 +74,14 @@
         </div>
     </div>
     <script src="data/js/script.js"></script>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-X22T9H00HY"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-X22T9H00HY');
+</script>
 </body>
 </html>
