--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                     </label>
                 </div>
                 <p class="url-text2"><br></p>
+                <div class="url-text2"id="send-button">꒰ঌ天気予報の取得໒꒱</div>
               </div>
               <p class="url-text2"><br></p>
                 <p class="url-text2"id="publishingOffice">　</p>
